[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Base64x64.png" type="Texture" id=1]
[ext_resource path="res://Images/GUN64x64.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Tower.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/lasergun.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 96.0

[node name="Tower" type="Node2D" groups=[
"tower",
]]
position = Vector2( 480, 352 )
script = ExtResource( 3 )

[node name="BaseTower" type="Sprite" parent="."]
position = Vector2( 0, 3.05176e-05 )
texture = ExtResource( 1 )

[node name="PumTower" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, 3.05176e-05 )
texture = ExtResource( 2 )

[node name="Aggro" type="Area2D" parent="."]
position = Vector2( 96, 7.99997 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
position = Vector2( -96, -7.99994 )
shape = SubResource( 1 )

[node name="Shoot_Timer" type="Timer" parent="."]
autostart = true

[node name="pew_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="area_entered" from="Aggro" to="." method="_on_Aggro_area_entered"]
[connection signal="area_exited" from="Aggro" to="." method="_on_Aggro_area_exited"]
[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
